--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -10,5 +10,6 @@
     <a href="{{ path('login') }}">Login</a>
     {% else %}
         <a href="{{ path('logout') }}">Logout</a>
+        <h2>WELCOME {{ app.user.firstname }}</h2>
     {% endif %}
 {% endblock %}
