--- a/templates/user/account.html.twig
+++ b/templates/user/account.html.twig
@@ -19,4 +19,6 @@
 
     <a href="{{ path('suppAccount') }}">Supp</a>
     <a href="{{ path('editAccount') }}">Edit</a>
+
+    <h3><a href="{{ path('addRun') }}">Add Run</a></h3>
 {% endblock %}
