--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -15,4 +15,5 @@
         <a href="{{ path('account') }}">My Account</a>
 
     {% endif %}
+    <a href="{{ path('users') }}">Our Users</a>
 {% endblock %}
