--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -13,6 +13,7 @@
         <h2>WELCOME {{ app.user.firstname }}</h2>
         <a href="{{ path('logout') }}">Logout</a>
         <a href="{{ path('account') }}">My Account</a>
+        <a href="{{ path('listRuns') }}"> RUNS </a>
 
     {% endif %}
     <a href="{{ path('users') }}">Our Users</a>
