--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -8,21 +8,26 @@
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <form action="{{ path('login') }}" method="post">
-        <label for="username">Email</label>
-        <input type="email" id="username" name="_username" value="{{ last_username }}" />
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password" />
-        <input type="hidden" name="_target_path" value="/account" />
-
-        {#
-            If you want to control the URL the user
-            is redirected to on success (more details below)
-            <input type="hidden" name="_target_path" value="/account" />
-        #}
-
-        <button type="submit">login</button>
-    </form>
+    <main class="connect-form">
+            <h2>Connexion</h2>
+            <form action="{{ path('login') }}" method="POST"> <!-- Action : page avec le résultat - Method : get -->
+                <div class="input-icon">
+                    <label for="username">Email</label>
+                    <input  type="email" id="username" name="_username" value="{{ last_username }}">
+                </div>
+                <div class="input-icon">
+                    <label for="password">Mot de passe</label>
+                    <input type="password" id="password" name="_password" />
+                    <input type="hidden" name="_target_path" value="/account" />
+                    <a href="#">mot de passe oublié ?</a>
+                </div>{#
+                    If you want to control the URL the user
+                    is redirected to on success (more details below)
+                    <input type="hidden" name="_target_path" value="/account" />
+                #}
+        
+                <button type="submit">login</button> <!-- Diriger vers la recherche -->
+            </form>
+        </main>
 
 {% endblock %}
