--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -1,10 +1,30 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{% endblock %}
+{% block title %}Inscription{% endblock %}
 
 {% block body %}
-
-    {{ form_start(registerForm, {'attr': {'novalidate': 'novalidate'}}) }}
-    {{ form_widget(registerForm) }}
-    {{ form_end(registerForm) }}
+    <main class="connect-form">
+        <h2>INSCRIPTION</h2>
+        {{ form_start(registerForm, {'attr': {'novalidate': 'novalidate'}}) }}
+        {{ form_row(registerForm.firstname, { 'label': '* Nom' }) }}
+        {{ form_row(registerForm.lastname, { 'label': '* Prénom' }) }}
+        {{ form_row(registerForm.email, { 'label': '* Email' }) }}
+        {{ form_row(registerForm.tel, { 'label': '* Téléphone' }) }}
+        {{ form_row(registerForm.password.first, { 'label': '* Mot de passe' }) }}
+        {{ form_row(registerForm.password.second, { 'label': '* Répéter le mot de passe' }) }}
+        {{ form_row(registerForm.vehicle, { 'label': 'Vehicule (si vous en avez un)' }) }}
+        <div class="input-icon">
+            <div class="input-image">
+                <label for="image">Choisir une image</label>
+                <input id="image" type="file" name="image" onchange="handle(this)" />
+                <div id="choose-img" style="background-image:url(http://placehold.it/100)"></div>
+            </div>
+        </div>
+        <div class="checked">
+            <input type="checkbox">
+            <p>j'accepte <a href="#">les conditions générales</a></p>
+        </div>
+        {{ form_row(registerForm.submit) }}
+        {{ form_end(registerForm) }}
+    </main>
 {% endblock %}
