--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -554,6 +554,7 @@
 				display: flex;
 				align-items: center;
 			}
+
 			> div {
 				display: flex;
 				flex-direction: column;
@@ -566,6 +567,10 @@
 					text-align: right;
 				}
 
+			}
+
+			.register {
+				text-align: center;
 			}
 
 			.input-image {
