--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -20,13 +20,15 @@
                     <input type="password" id="password" name="_password" />
                     <input type="hidden" name="_target_path" value="/account" />
                     <a href="#">mot de passe oublié ?</a>
-                </div>{#
+                </div>
+                {#
                     If you want to control the URL the user
                     is redirected to on success (more details below)
                     <input type="hidden" name="_target_path" value="/account" />
                 #}
         
                 <button type="submit">login</button> <!-- Diriger vers la recherche -->
+                <p class="register">Vous n'avez pas de compte ? <a href="{{ path('register') }}">S'inscrire</a> </p>
             </form>
         </main>
 
