--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,17 +37,21 @@
                 </div>
             {% else %}
                 <div id="user-connected">
-                    <div id="user-img" style="background-image:url(http://placehold.it/50)"></div>
-                    <div class="menu">
-                        <img class="burger" src="{{ asset('img/menu.png') }}" alt="icon burger du menu utilisateur" size="100">
-                        <ul class="nav">
-                            <li><a href="tableau.html">Tableau de bord</a></li>
-                            <li class="border-top"><a href="{{ path('addRun') }}">Proposer un trajet</a></li>
-                            <li class="border-top"><a href="{{ path('listRuns') }}">Rechercher un trajet</a></li>
-                            <li class="border-top"><a href="{{ path('account') }}">Mon profil</a></li>
-                            <li class="border-top"><a href="{{ path('logout') }}">Se déconnecter</a></li>
-                        </ul>
-                    </div>
+                    {% if app.user.picture != null %}
+                        <div class="user-img" style="background-image:url( '{{ app.user.picture }}' )"></div>
+                    {% else %}
+                        <div class="user-img" style="background-image:url('{{ asset('img/dog.jpg') }}'); -webkit-filter: saturate(40%);"></div>
+                    {% endif %}
+                        <div class="menu">
+                            <img class="burger" src="{{ asset('img/menu.png') }}" alt="icon burger du menu utilisateur" size="100">
+                            <ul class="nav">
+                                <li><a href="{{ path('ridecourt') }}">Tableau de bord</a></li>
+                                <li class="border-top"><a href="{{ path('addRun') }}">Proposer un trajet</a></li>
+                                <li class="border-top"><a href="{{ path('searchride') }}">Rechercher un trajet</a></li>
+                                <li class="border-top"><a href="{{ path('account') }}">Mon profil</a></li>
+                                <li class="border-top"><a href="{{ path('logout') }}">Se déconnecter</a></li>
+                            </ul>
+                        </div>
                 </div>
             {% endif %}
         </header>
