--- a/templates/run/addRun.html.twig
+++ b/templates/run/addRun.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Add Run{% endblock %}
+{% block title %}Ajouter un Trajet{% endblock %}
 
 {% block body %}
     {{ form(runForm) }}
