--- a/templates/tableau/search_ride.html.twig
+++ b/templates/tableau/search_ride.html.twig
@@ -8,7 +8,7 @@
     <!-- ETIQUETTES -->
     <a class="trip" href="#">
         <div class="img-rider">
-            <div class="img-profil-rider" style="background-image:url(http://placehold.it/100)"></div>
+            <div class="img-profil-rider" style="background-image:url('{{ asset('img/dog.jpg') }}'); -webkit-filter: saturate(40%);"></div>
             <p>Conducteur(.trice)</p>
         </div>
         <div class="name-step">
@@ -25,7 +25,7 @@
     <!-- ETIQUETTES -->
     <a class="trip" href="#">
         <div class="img-rider">
-            <div class="img-profil-rider" style="background-image:url(http://placehold.it/100)"></div>
+            <div class="img-profil-rider" style="background:url('{{ asset('img/dog.jpg') }}'), rgba(0, 0, 0, 0.5)"></div>
             <p class="conducteur">Conducteur(.trice)</p>
         </div>
         <div class="name-step">
