update templete, css, runcontroller et form type

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -165,7 +165,7 @@ h4 {
 a {
   color: #88DB15; }
 
-input {
+input, .connect-form form > div select, .connect-form form > div #run > div select {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
@@ -175,7 +175,7 @@ input {
   outline: none;
   font-size: 1.6rem; }
 
-input:focus {
+input:focus, .connect-form form > div select:focus, .connect-form form > div #run > div select:focus {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
@@ -186,19 +186,19 @@ input:focus {
   -ms-box-shadow: 0px 0px 3px #88DB15;
   box-shadow: 0px 0px 3px #88DB15; }
 
-input[placeholder] {
+input[placeholder], .connect-form form > div select[placeholder], .connect-form form > div #run > div select[placeholder] {
   text-transform: none; }
 
-input[type="date"] {
+input[type="date"], .connect-form form > div select[type="date"], .connect-form form > div #run > div select[type="date"] {
   width: 130px;
   color: rgba(0, 0, 0, 0.6); }
 
-input[type="time"] {
+input[type="time"], .connect-form form > div select[type="time"], .connect-form form > div #run > div select[type="time"] {
   width: 70px;
   color: rgba(0, 0, 0, 0.6);
   margin-right: 0px; }
 
-input[name="place"] {
+input[name="place"], .connect-form form > div select[name="place"], .connect-form form > div #run > div select[name="place"] {
   width: 30px; }
 
 .input-icon, .connect-form form .checked {
@@ -243,7 +243,7 @@ button:hover {
         max-width: 100px;
         padding-right: 20px; }
 
-.form-search .input-icon input, .form-search .connect-form form .checked input, .connect-form form .form-search .checked input {
+.form-search .input-icon input, .form-search .connect-form form .checked input, .connect-form form .form-search .checked input, .form-search .input-icon .connect-form form > div select, .connect-form form > div .form-search .input-icon select, .form-search .connect-form form > div .checked select, .connect-form form > div .form-search .checked select, .form-search .input-icon .connect-form form > div #run > div select, .connect-form form > div #run > div .form-search .input-icon select, .form-search .connect-form form > div .checked #run > div select, .form-search .connect-form form > div #run > div .checked select, .connect-form form > div .form-search .checked #run > div select, .connect-form form > div #run > div .form-search .checked select {
   padding-left: 30px;
   max-width: 150px; }
 
@@ -502,10 +502,30 @@ footer {
       display: flex;
       flex-direction: column;
       margin: 0px 0px 20px 0px; }
-      .connect-form form > div input {
+      .connect-form form > div input, .connect-form form > div select, .connect-form form > div #run > div select {
         padding-left: 15px; }
       .connect-form form > div a {
         text-align: right; }
+      .connect-form form > div select {
+        margin: 10px 2px; }
+      .connect-form form > div #run {
+        margin: 50px auto;
+        width: 330px;
+        display: flex;
+        flex-direction: column; }
+        .connect-form form > div #run .input-date-time {
+          display: flex;
+          align-items: center; }
+        .connect-form form > div #run > div {
+          display: flex;
+          flex-direction: column;
+          margin: 0px 0px 20px 0px; }
+          .connect-form form > div #run > div input, .connect-form form > div #run > div select {
+            padding-left: 15px; }
+          .connect-form form > div #run > div a {
+            text-align: right; }
+          .connect-form form > div #run > div select {
+            margin: 10px 2px; }
     .connect-form form .register {
       text-align: center; }
     .connect-form form .input-image {
@@ -523,9 +543,9 @@ footer {
         cursor: pointer; }
       .connect-form form .input-image label:hover {
         text-decoration: underline; }
-      .connect-form form .input-image input[type=file] {
+      .connect-form form .input-image input[type=file], .connect-form form > div .input-image select[type=file], .connect-form form > div .input-image #run > div select[type=file], .connect-form form > div #run > div .input-image select[type=file] {
         display: none; }
-      .connect-form form .input-image input:focus {
+      .connect-form form .input-image input:focus, .connect-form form > div .input-image select:focus, .connect-form form > div .input-image #run > div select:focus, .connect-form form > div #run > div .input-image select:focus {
         border: none; }
       .connect-form form .input-image #choose-img {
         -webkit-border-radius: 50%;
@@ -540,11 +560,11 @@ footer {
       display: flex;
       flex-direction: row;
       align-items: center; }
-      .connect-form form .checked input {
+      .connect-form form .checked input, .connect-form form > div .checked select, .connect-form form > div .checked #run > div select, .connect-form form > div #run > div .checked select {
         width: 17px;
         height: 17px;
         margin-right: 20px; }
-      .connect-form form .checked input:focus {
+      .connect-form form .checked input:focus, .connect-form form > div .checked select:focus, .connect-form form > div .checked #run > div select:focus, .connect-form form > div #run > div .checked select:focus {
         border: none; }
     .connect-form form button {
       margin-top: 10px;
