--- a/templates/run/addRun.html.twig
+++ b/templates/run/addRun.html.twig
@@ -3,5 +3,9 @@
 {% block title %}Ajouter un Trajet{% endblock %}
 
 {% block body %}
-    {{ form(runForm) }}
+
+     <main class="connect-form">
+        <h2>Ajouter un trajet</h2>
+         {{ form(runForm) }}
+    </main>
 {% endblock %}
